jeff-hax/capabilities/neuvector/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: neuvector
  labels:
    istio-injection: enabled
